updated some yml files